[package]
name = "gtk4-rs-examples"
version = "0.1.0"
authors = ["xxx <xxx@xxx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

gio = { git = "https://github.com/gtk-rs/gtk-rs", features = ["v2_46"] }
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
gtk= { git = "https://github.com/gtk-rs/gtk4-rs", package="gtk4"}

[[bin]]
name="message_dialog"